vm/vagrant/k8s/manifests/40-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: ds2025
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: ds2025
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/it2022031/ds2025-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
