vm/vagrant/k8s/manifests/50-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: ds2025
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: ds2025
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/it2022031/ds2025-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
