vm/vagrant/k8s/manifests/60-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ds2025-ingress
  namespace: ds2025
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: public
  rules:
    - http:
        paths:
          # API -> backend
          - path: /api/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 8080

          # Frontend -> frontend service
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80
